--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         </div>
       </div>
     </div>
-   <small> <a href="https://github.com/natashangoi/SheCodes-Plus-Project-V1" target="_blank">Open-source code</a>
-    , by Natasha Ngoi</small>
+   <small>
+       <a href="https://github.com/natashangoi/SheCodes-Plus-Project-V1" target="_blank">Open-source code</a>, by Natasha Ngoi</small>
     <script src="src/index.js"></script>
   </body>
 </html>
